Changed to Homepage1

--- a/html/application.htm
+++ b/html/application.htm
@@ -6,7 +6,7 @@
 	<link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <p class="arzu-site-header"> 
- <a href="homepage.htm"> Homepage </a>|
+ <a href="homepage.htm"> Homepage1 </a>|
  <a href="blog.htm"> Blog </a>|
  <a href="gallery.htm"> Gallery </a>|
  <a href="application.htm">Application Form </a>|
