from blog to Arzu

--- a/html/blog.htm
+++ b/html/blog.htm
@@ -2,7 +2,7 @@
 <html>
 
 <head> 
-	<title> Blog </title>  
+	<title> Arzu </title>  
 </head>
 <p align="center">
  <a href="homepage.htm"> Homepage </a>|
