Some new changes

--- a/html/application.htm
+++ b/html/application.htm
@@ -2,17 +2,17 @@
 <html>
 
 <head> 
-	<title> Abood </title>
+	<title> Application Form </title>
 	<link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <p class="arzu-site-header"> 
- <a href="homepage.htm"> Homepage1 </a>|
+ <a href="homepage.htm"> Homepage </a>|
  <a href="blog.htm"> Blog </a>|
  <a href="gallery.htm"> Gallery </a>|
  <a href="application.htm">Application Form </a>|
  <a href="report.htm"> Data Report </a>|
- <a href="contact.htm"> Contact </a>|
- <a href="resources.htm"> Resources </a>
+ <a href="resources.htm"> Resources </a>|
+ <a href="contact.htm"> Contact </a>
 </p>
  
  <body>
