--- a/html/blog.htm
+++ b/html/blog.htm
@@ -2,18 +2,19 @@
 <html>
 
 <head> 
-	<title> Arzu </title>  
+	<title> Blog </title>  
+  <link href="style.css" type="text/css" rel="stylesheet">
 </head>
-<p align="center">
- <a href="homepage.htm"> Homepage </a>|
- <a href="blog.htm"> Blog </a>|
- <a href="gallery.htm"> Gallery </a>|
- <a href="application.htm">Application Form </a>|
- <a href="report.htm"> Data Report </a>|
- <a href="contact.htm"> Contact </a>|
- <a href="resources.htm"> Resources </a> </p>
- <br>
-<p align="center"> 
+
+<p class="arzu-site-header"> 
+	<a href="homepage.htm"> Homepage </a>|
+	<a href="blog.htm"> Blog </a>|
+	<a href="gallery.htm"> Gallery </a>|
+	<a href="application.htm">Application Form </a>|
+  <a href="report.htm"> Data Report </a>|
+  <a href="resources.htm"> Resources </a>|
+	<a href="contact.htm"> Contact </a>
+   </p>
   <h1 align="center"> EDUCATION </h1> 
 
  </p>
