--- a/html/report.htm
+++ b/html/report.htm
@@ -3,16 +3,18 @@
 
 <head>
 	<title> Data Report </title> 
+	<link href="style.css" type="text/css" rel="stylesheet">
 </head>
-<p align="center"> 
- <a href="homepage.htm"> Homepage </a>|
- <a href="blog.htm"> Blog </a>|
- <a href="gallery.htm"> Gallery </a>|
- <a href="application.htm">Application Form </a>|
- <a href="report.htm"> Data Report </a>|
- <a href="contact.htm"> Contact </a>|
- <a href="resources.htm"> Resources </a>
-</p>
+
+<p class="arzu-site-header"> 
+	<a href="homepage.htm"> Homepage </a>|
+	<a href="blog.htm"> Blog </a>|
+	<a href="gallery.htm"> Gallery </a>|
+	<a href="application.htm">Application Form </a>|
+	<a href="report.htm"> Data Report </a>|
+	<a href="resources.htm"> Resources </a>|
+	<a href="contact.htm"> Contact </a>
+   </p>
   <body>
  <h1 align="center"> Students Report</h1>
  
