--- a/html/resources.htm
+++ b/html/resources.htm
@@ -3,32 +3,52 @@
 
 <head>
 <title> Resources </title> 
+<link href="style.css" type="text/css" rel="stylesheet">
 </head>
-<p align="center"> 
- <a href="homepage.htm"> Homepage </a>|
- <a href="blog.htm"> Blog </a>|
- <a href="gallery.htm"> Gallery </a>|
- <a href="application.htm">Application Form </a>|
- <a href="report.htm"> Data Report </a>|
- <a href="contact.htm"> Contact </a>|
- <a href="resources.htm"> Resources </a>
-</p>
+
+<p class="arzu-site-header"> 
+	<a href="homepage.htm"> Homepage </a>|
+	<a href="blog.htm"> Blog </a>|
+	<a href="gallery.htm"> Gallery </a>|
+	<a href="application.htm">Application Form </a>|
+	<a href="report.htm"> Data Report </a>|
+	<a href="resources.htm"> Resources </a>|
+	<a href="contact.htm"> Contact </a>
+   </p>
+
 	<body>
  <h1 align="center"> Helpful Resources</h1>
+
+ <blockquote>
+
 <h3> Academic Resources</h3>
+<ul>
+	<li><a href="http://clas.ku.edu/undergrad">College Advising & Student Services</a>- Change or update your major plus many more resources related to majors in the College of Liberal Arts and Sciences </li>
+	<li><a href="http://careers.ku.edu/">University Career Center</a> - Information about student careers in majors at KU, internships and the Career Advancement Program </li>
+	<li><a href="http://achievement.ku.edu/">Academic Achievement and Access Center</a>- Offers many services and programs to assist students in their academic success </li>
+</ul>
+
+<h3> Campus Resources </h3>
+<ol>
+	<li><a href="http://clas.ku.edu/undergrad">College Advising & Student Services</a>- Change or update your major plus many more resources related to majors in the College of Liberal Arts and Sciences </li>
+	<li><a href="http://careers.ku.edu/">University Career Center</a> - Information about student careers in majors at KU, internships and the Career Advancement Program </li>
+	<li><a href="http://achievement.ku.edu/">Academic Achievement and Access Center</a>- Offers many services and programs to assist students in their academic success </li>
+</ol>
 
 
+<h3>TED talks, Graduation Speeches & Other Recorded Speakers</h3>
+<p> One way to learn from experienced business leaders and innovators who have first-hand knowledge of the business world is to find and watch recordings of their talks online.
+
+	TED, for instance, has some really compelling talks about business strategy you can watch for free. Here's one from Bill Gross, a man who's founded many startups and incubated many others, on why some fail and others succeeded based on data from hundreds of companies:
+</p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/bNpx7gpSqbY" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/DTcJmIbn5nw" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.kuiu.com/" frameborder="1" > </iframe>
+<iframe width="560" height="315" src="https://www.bbc.com/" frameborder="1" > </iframe>
 
 
-
- 
-
-
-
-
-
-
-
+</blockquote>
 
 
  <hr>
