--- a/html/contact.htm
+++ b/html/contact.htm
@@ -3,21 +3,22 @@
 
 <head> <hl>
 <title> MyPage </title>  </hl>
+<link href="style.css" type="text/css" rel="stylesheet">
 </head>
-<p align="center"> 
- <b> <hl> My First Webpage </hl> </b><br>
- <br>
- 
- <body>
- <a href="homepage.htm"> Homepage </a>|
- <a href="Blog.htm"> Blog </a>|
- <a href="Gallery.htm"> Gallery </a>|
- <a href="Contact.htm"> Contact </a>|
- <a href="Resources.htm"> Resources </a>
+
+<p class="arzu-site-header"> 
+	<a href="homepage.htm"> Homepage </a>|
+	<a href="blog.htm"> Blog </a>|
+	<a href="gallery.htm"> Gallery </a>|
+	<a href="application.htm">Application Form </a>|
+    <a href="report.htm"> Data Report </a>|
+    <a href="resources.htm"> Resources </a>|
+	<a href="contact.htm"> Contact </a>
+   </p>
  
  <hr>
  
- <p align="center"> &real; Copyright  www.arzuhasanova.org </p>
+ <p align="center"> &copy; Copyright  www.arzuhasanova.org </p>
 
 </body>
 </p>
