--- a/html/gallery.htm
+++ b/html/gallery.htm
@@ -3,16 +3,18 @@
 
 <head> 
 	<title> Gallery </title>  
+  <link href="style.css" type="text/css" rel="stylesheet">
 </head>
-<p align="center">
- <a href="homepage.htm"> Homepage </a>|
- <a href="Blog.htm"> Blog </a>|
- <a href="Gallery.htm"> Gallery </a>|
- <a href="application.htm">Application Form </a>|
- <a href="report.htm"> Data Report </a>|
- <a href="Contact.htm"> Contact </a>|
- <a href="Resources.htm"> Resources </a>
-</p>
+
+<p class="arzu-site-header"> 
+	<a href="homepage.htm"> Homepage </a>|
+	<a href="blog.htm"> Blog </a>|
+	<a href="gallery.htm"> Gallery </a>|
+	<a href="application.htm">Application Form </a>|
+  <a href="report.htm"> Data Report </a>|
+  <a href="resources.htm"> Resources </a>|
+	<a href="contact.htm"> Contact </a>
+   </p>
 <p align="center"> 
   <h1 align="center"> WORLD EDUCATION </h1>
  
