--- a/html/homepage.htm
+++ b/html/homepage.htm
@@ -3,18 +3,19 @@
 
 <head>
 	<title> Homepage </title> 
+	<link href="style.css" type="text/css" rel="stylesheet">
 </head>
- 
- <body>
- <p align="center">
- <a href="homepage.htm"> Homepage </a>|
- <a href="blog.htm"> Blog </a>|
- <a href="gallery.htm"> Gallery </a>|
- <a href="application.htm">Application Form </a>|
- <a href="report.htm"> Data Report </a>|
- <a href="contact.htm"> Contact </a>|
- <a href="resources.htm"> Resources </a>
- </p>
+
+<p class="arzu-site-header"> 
+	<a href="homepage.htm"> Homepage </a>|
+	<a href="blog.htm"> Blog </a>|
+	<a href="gallery.htm"> Gallery </a>|
+	<a href="application.htm">Application Form </a>|
+	<a href="report.htm"> Data Report </a>|
+	<a href="resources.htm"> Resources </a>|
+	<a href="contact.htm"> Contact </a>
+   </p>
+   <body>
  <h1 align="center">  Welcome to my website! <br>
  I hope this blog will be helpful for you :)</h1>
  <br>
