--- a/html/contact.htm
+++ b/html/contact.htm
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 
-<head> <hl>
-<title> MyPage </title>  </hl>
+<head>
+<title> Contact </title> 
 <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 
@@ -14,10 +14,36 @@
     <a href="report.htm"> Data Report </a>|
     <a href="resources.htm"> Resources </a>|
 	<a href="contact.htm"> Contact </a>
-   </p>
- 
+</p>
+  
+<h1 align="center">Contact Us / Address Information</h1>
+
+<form>
+	Your Name: <input type="text"> <br><br>
+	Your Email: <input type="email"> <br><br>
+	Subject: <input type="text" name="subject"> <br> <br>
+	Comments: <br><textarea cols="11" rows="5"></textarea><br><br>
+	<input type="submit">   <input type="reset">
+</form>
+
+
+<p>Members of staff can find a full list of the Editorial Policy Advisers and their contact details on our Gateway page.</p>
+
+<p><b>The postal address for Editorial Policy is:<br>
+
+BC2 A1, BBC Broadcast Centre<br>
+
+201 Wood Lane<br>
+
+London W12 7TP</b> </p>
+
+<p>Email <a href="mailto:editorial.policy.adviser@bbc.co.uk"> editorial.policy.adviser@bbc.co.uk</a></p>
+<p align="center">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3038.9438039081206!2d49.8239896152568!3d40.387938079368475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40307d9cabae26d1%3A0x658070b001e82caa!2zQkJDIMWfaXJryZl0aW5pbiBBesmZcmJheWNhbmRha8SxIG7DvG1hecmZbmTJmWxpeWk!5e0!3m2!1sen!2s!4v1609351562869!5m2!1sen!2s" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+</p>
+
+
  <hr>
- 
  <p align="center"> &copy; Copyright  www.arzuhasanova.org </p>
 
 </body>
