--- a/html/homepage.htm
+++ b/html/homepage.htm
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
-
+ 
+	<a name="top"/>
+	
 <head>
 	<title> Homepage </title> 
 	<link href="style.css" type="text/css" rel="stylesheet">
@@ -14,7 +16,7 @@
 	<a href="report.htm"> Data Report </a>|
 	<a href="resources.htm"> Resources </a>|
 	<a href="contact.htm"> Contact </a>
-   </p>
+</p>
    <body>
  <h1 align="center">  Welcome to my website! <br>
  I hope this blog will be helpful for you :)</h1>
@@ -33,9 +35,9 @@
 <ul>Give a man a fish and you feed him for a day; teach a man to fish and you feed him for a lifetime.</ul> </em></h2>
  
  
+<a href="#top">Go to the top</a>
  
  <hr>
- 
  <p align="center"> &copy; Copyright  www.arzuhasanova.org </p>
 
 </body>
