--- a/html/application.htm
+++ b/html/application.htm
@@ -2,7 +2,7 @@
 <html>
 
 <head> 
-	<title> Form </title>
+	<title> Application Form </title>
 	<link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <p class="arzu-site-header"> 
