--- a/html/gallery.htm
+++ b/html/gallery.htm
@@ -7,9 +7,9 @@
 </head>
 
 <p class="arzu-site-header"> 
-	<a href="homepage.htm"> Homepage </a>|
+	<a class="homepage" href="homepage.htm"> Homepage </a>|
 	<a href="blog.htm"> Blog </a>|
-	<a href="gallery.htm"> Gallery </a>|
+	<a href="gallery.htm" class="gallery"> Gallery </a>|
 	<a href="application.htm">Application Form </a>|
   <a href="report.htm"> Data Report </a>|
   <a href="resources.htm"> Resources </a>|
