--- a/html/gallery.htm
+++ b/html/gallery.htm
@@ -7,7 +7,7 @@
 </head>
 
 <p class="arzu-site-header"> 
-	<a class="homepage" href="homepage.htm"> Homepage </a>|
+	<a class="home-page" href="homepage.htm"> Homepage </a>|
 	<a href="blog.htm"> Blog </a>|
 	<a href="gallery.htm" class="gallery"> Gallery </a>|
 	<a href="application.htm">Application Form </a>|
